discussion/kv_engine/162645/162645_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce ExtractItemsResult

New return type of CM::extractItemsToExpel.
For now it just introduces some of the boilerplate necessary in future
patches where we'll remove some O(N) code that is currently responsible
for updating the Checkpoint::queuedItemsMemUsage counter at expel.

Change-Id: I4429a367fa80df18fbe9d028f3b5a78443c122ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-01 14:25:33.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-01 14:34:16.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34562/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40628/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40628/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2649/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2649/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22914/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2685/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2685/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15468/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13777/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13777/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13031/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:140:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
      __pointer->~_Tp();
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/list.tcc:77:24: note: in instantiation of function template specialization "std::allocator_traits<MemoryTrackingAllocator<std::_List_node<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > > >::destroy<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > >" requested here
          _Node_alloc_traits::destroy(_M_get_Node_allocator(), __val);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:499:9: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::_M_clear" requested here
      { _M_clear(); }
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:673:7: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::~_List_base" requested here
      list() = default;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:21:7: note: forward declaration of "Item"
class Item;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:298:36: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (old != nullptr && --old->_rc_refcount == 0) {
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:259:9: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::swap" requested here
        swap(other.value);
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/list.tcc:316:21: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::operator=" requested here
          *__first1 = *__first2;
                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:1964:4: note: in instantiation of function template specialization "std::__cxx11::list<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::_M_assign_dispatch<std::move_iterator<std::_List_iterator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > > >" requested here
          _M_assign_dispatch(std::make_move_iterator(__x.begin()),
          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:859:2: note: in instantiation of member function "std::__cxx11::list<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::_M_move_assign" requested here
        _M_move_assign(std::move(__x), __bool_constant<__move_storage>());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:761:19: note: in instantiation of member function "std::__cxx11::list<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::operator=" requested here
            items = std::move(other.items);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:21:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13031/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13031/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11819/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14629/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14898/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
